--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Brittany (France) -- Description and travel'
 - !lcc 'DC'
+- GITenberg
 title: Rambles in Brittany
 url: http://www.gutenberg.org/ebooks/42866
